Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,24 +1,21 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5924185137:AAGgb-vkaPz3DQQpy0QDG83KdwONGZhs1mc"                              # Require restart after changing it while bot running
+OWNER_ID = "5360024749"                               # Require restart after changing it while bot running
+TELEGRAM_API = "12089151"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "6b080a0eee6c4efd5fe73bbe67bb5b3c"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = ""
+GDRIVE_ID = "0APY9lpG5TlarUk9PVA"
+IS_TEAM_DRIVE = "true"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-811317595"                       # Require restart after changing it while bot running
+SUDO_USERS = "5360024749 783972422 1730172960 5338195660"                             # Require restart after changing it while bot running
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "true"
+INDEX_URL = "https://serious.whyso.workers.dev/0:"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""                              # Require restart after changing it while bot running
@@ -30,7 +27,7 @@ YT_DLP_QUALITY = ""
 
 # Update
 UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_BRANCH = "h-code"
 
 # Leech
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
@@ -41,8 +38,8 @@ MEDIA_GROUP = ""
 DUMP_CHAT = ""
 
 # qBittorrent/Aria2c
-BASE_URL = ""
-SERVER_PORT = ""
+BASE_URL = "telugu143.onrender.com"
+SERVER_PORT = "80"
 WEB_PINCODE = ""
 
 #Queueing system
@@ -57,12 +54,12 @@ RSS_CHAT_ID = ""
 RSS_USER_SESSION_STRING = ""                # Require restart after changing it while bot running
 
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "7lkkEJrC"
+MEGA_EMAIL_ID = "naturenatural000@gmail.com"
+MEGA_PASSWORD = "&\k-4UDXg-24>2m2Ph$>)c8"
 
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "true"
 
 # Torrent Search
 SEARCH_API_LINK = ""
