--- a/config.env
+++ b/config.env
@@ -26,7 +26,7 @@ INCOMPLETE_TASK_NOTIFIER = ""
 YT_DLP_QUALITY = ""
 
 # Update
-UPSTREAM_REPO = ""
+UPSTREAM_REPO = "https://reupmul5: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@github.com/reupmul5/jmdkhre"
 UPSTREAM_BRANCH = "h-code"
 
 # Leech
